--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     This graph shows includes coins of the <a href="https://en.wikipedia.org/wiki/Template:Most_traded_currencies">20 most traded currencies</a>.
     When more than one version of the same denomination is circulated,
     I have chosen to include the most recently minted.
-    Hower the mouse over a coin to bring it to the top.
+    Hover the mouse over a coin to bring it to the top.
     Leave the mouse there for a second to see a tooltip with the nominal value and the ISO code of the currency.
   </p>
   <p>
