--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 © 2017 Daniel Eriksson
 -->
 <meta charset="utf-8">
+<title>Mass, value and size of coins of common currencies</title>
 <style>
 
 .axis text {
