Update ECB api base url
SDW web services API has been moved to the European Data Portal and the url now redirects to `https://data-api.ecb.europa.eu`. This changes the base url to the new one. This hopefully also fixes CORS errors as it seems that the CORS headers were dropped in the redirect process.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ var chart = d3.select(".chart")
 
 Promise.all([
     d3.csv("coin_data.csv"),
-    d3.csv("https://sdw-wsrest.ecb.europa.eu/service/data/EXR/D..EUR.SP00.A?lastNObservations=1", {headers : {"Accept" : "text/csv"}})
+    d3.csv("https://data-api.ecb.europa.eu/service/data/EXR/D..EUR.SP00.A?lastNObservations=1", {headers : {"Accept" : "text/csv"}})
   ]).then(buildChart);
 
 function buildChart(data) {
