Update copyright year

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-© 2017 Daniel Eriksson
+© 2017-2023 Daniel Eriksson
 -->
 <meta charset="utf-8">
 <title>Mass, value and size of coins of common currencies</title>
