Fix typo in index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ h1 {
 
 <div id="colophon">
   <p>
-    This graph shows includes coins of the <a href="https://en.wikipedia.org/wiki/Template:Most_traded_currencies">20 most traded currencies</a>.
+    This graph includes coins of the <a href="https://en.wikipedia.org/wiki/Template:Most_traded_currencies">20 most traded currencies</a> globally.
     When more than one version of the same denomination is circulated,
     I have chosen to include the most recently minted.
     Hover the mouse over a coin to bring it to the top.
